--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,4 +1,17 @@
-#title{
-	background: #2B97F5;
+body{
+	background: #f1f1f1;
 }
 
+.container{
+	margin: 85%;
+}
+
+.bulk{
+	width: 75%;
+	margin: 0 auto;
+	padding: 20px;
+}
+
+.top{
+	background: black;
+}
