--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,8 +2,10 @@
 <script src="http://code.highcharts.com/modules/exporting.js"></script>
 <body>
 	<header>
-		<h1>Welcome</h1>
+
 	</header>
-	
+	<div class"top"></div>
+	<div class="bulk">
 	<div id="container1" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+</div>
 <body>
